--- a/pocketbase/Dockerfile
+++ b/pocketbase/Dockerfile
@@ -11,12 +11,12 @@ ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/po
 RUN unzip /tmp/pb.zip -d /pb/
 
 # uncomment to copy the local pb_migrations dir into the image
-COPY ./pocketbase/pb_migrations /pb/pb_migrations
+COPY ./pb_migrations /pb/pb_migrations
 
 # uncomment to copy the local pb_hooks dir into the image
-COPY ./pocketbase/pb_hooks /pb/pb_hooks
+COPY ./pb_hooks /pb/pb_hooks
 
-EXPOSE 8080
+EXPOSE 5000
 
 # start PocketBase
-CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8080"]
+CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:5000"]
