--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@iconify/icons-mdi": "^1.2.48",
+    "@iconify/svelte": "^3.1.4",
     "@skeletonlabs/skeleton": "2.4.0",
     "@skeletonlabs/tw-plugin": "0.2.3",
     "@sveltejs/adapter-auto": "^2.0.0",
